<?xml version="1.0" encoding="utf-8"?>
<!--
	Personal Project : Control server
		MERCANDALLI Jonathan
-->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp" >

    <EditText
        android:id="@+id/server"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="5dp"
        android:ems="10"
        android:gravity="center_vertical"
        android:hint="@string/dialog_server_route"
        android:padding="10dp" />

    <EditText
        android:id="@+id/json"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/server"
        android:layout_marginTop="5dp"
        android:ems="10"
        android:hint="@string/dialog_json"
        android:padding="10dp" >
    </EditText>

    <RelativeLayout
        android:id="@+id/file"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/json"
        android:layout_marginTop="5dp" >

        <TextView
            android:id="@+id/label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignTop="@+id/fileButton"
            android:layout_toLeftOf="@+id/fileButton"
            android:ems="10"
            android:padding="10dp"
            android:text="@string/no_file"
            android:textColor="#000"
            android:textSize="18sp" />

        <Button
            android:id="@+id/fileButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:text="@string/file" />
   </RelativeLayout>
   
    <TextView
        android:id="@+id/method"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/file"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="7dp"
        android:text="@string/method"
        android:textSize="22sp" />

    <Button
        android:id="@+id/request"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/method"
        android:layout_marginTop="5dp"
        android:text="@string/request" />

    

</RelativeLayout>