<?xml version="1.0" encoding="utf-8"?>
<!--
	Personal Project : Control server
		MERCANDALLI Jonathan
-->
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_alignParentTop="true"
    android:layout_centerHorizontal="true" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp" >

        <RelativeLayout
            android:id="@+id/toggle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_marginTop="15dp" >

            <TextView
                android:id="@+id/label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignTop="@+id/toggleButton"
                android:ems="10"
                android:padding="10dp"
                android:text="@string/dialog_login"
                android:textColor="#000"
                android:textSize="18sp" />

            <ToggleButton
                android:id="@+id/toggleButton"
                android:layout_width="48dp"
                android:layout_height="30dp"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="10dp"
                android:background="@drawable/toggle_me"
                android:textOff=" "
                android:textOn=" " />
        </RelativeLayout>

        <EditText
            android:id="@+id/server"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/username"
            android:layout_alignRight="@+id/username"
            android:layout_below="@+id/toggle"
            android:layout_marginTop="10dp"
            android:ems="10"
            android:gravity="center_vertical"
            android:hint="@string/dialog_server_url"
            android:padding="10dp" />

        <EditText
            android:id="@+id/password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/username"
            android:layout_marginTop="10dp"
            android:ems="10"
            android:hint="@string/dialog_password"
            android:inputType="textPassword"
            android:padding="10dp" >
        </EditText>

        <EditText
            android:id="@+id/username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/server"
            android:layout_marginTop="10dp"
            android:ems="10"
            android:hint="@string/dialog_username"
            android:padding="10dp" >
        </EditText>

        <Button
            android:id="@+id/signin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/password"
            android:layout_marginTop="10dp"
            android:text="@string/signin" />
    </RelativeLayout>

</ScrollView>